	* arch/x86/include/i486/irq.h -- Fix irqrestore() macro... it was not
	  correctly re-enabling interrupts.
	* arch/x86/src - Fix numerous problems with i486/QEMU context
	  switching.  Basically, the logic was missing the cases to handle
	  the differing stack frames when a priority change occurs and when
	  no priority change occurs.
	* configs/qemu-i486/ostest and nsh -- The QEMU i486 port is complete.
	  it now passes the OS test and supports the NuttShell (NSH).
	* misc/drivers -- Created a new directory to hold non-BSD licensed
	  drivers that may be added into NuttX via an installation script.
	* drivers/usbhost/usbhost_rtl8187.c -- A decision was made to
	  incorporate code taken from the Linux kernel.  That changes the
	  licensing on this module to GPL.  To avoid licensing contamination,
	  this driver was moved to misc/drivers/rtl8187x *prior* to adding
	  any of the GPL logic.  There is an INSTALL.sh script at the location
	  where the GPL driver(s) can be re-installed into the NuttX source
	  tree.  By re-installing the driver, you agree to the GPL licsensing
	  and all of its implications.
	* Makefile, apps/Makefile, tools/configure.sh -- add logic to copy
	  configs/<board>/<config>/appdir to apps/.config and to simply the
	  application configuration logic.
	* examples/nsh and apps/nshlib - Move the core NuttShell (NSH) logic
	  out of the exemples directory and into the apps/ directory where
	  it belongs.
	* apps/Makefile and configs/*/appconfig - Use '=' as the delimiter
	  instead of '/' so that sub-directories in apps/ can be used.
	* apps/vsn - Move all VSN apps to apps/vsn.
	* nuttx/examples moved to apps/examples

6.1 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/include/lpc17xx/irq.h and arch/arm/src/lpc17xx/lpc17_gpio*.c
	  -- Fix several bugs in the GPIO interrupt logic.  Submited by
	  Decio Renno.
	* Initialization for the CONFIG_APPS_DIR is now supported during the
	  earlier, 'context' build phase.

	  


	  